--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="/assets/ckeditor/styles.css" />
   <link rel="canonical" href="https://www.cubingitaly.org" />
   <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
