--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <meta property="og:heigth" content="300" />
   <meta name="theme-color" content="#0b5ea6" />
   <link rel="stylesheet" href="/assets/ckeditor/styles.css" />
+  <link rel="stylesheet" href="/assets/fonts/cubing-icons/css/cubing-icons.css">
   <link rel="icon" type="image/x-icon" href="favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
